fix svg cannot show

--- a/ia/index.html
+++ b/ia/index.html
@@ -47,13 +47,13 @@
 
         <div id="continue-button" class="ctrl-console console">
             <div class="ctrl-button frame button">
-                <div>
-                    <div w3-include-html="./svg/icon/start.svg"></div>
+                <div w3-include-html="./svg/icon/start.svg">
+
                 </div>
             </div>
             <div id="leave-button" class="ctrl-button frame button">
-                <div>
-                    <div w3-include-html="./svg/icon/exit.svg"></div>
+                <div w3-include-html="./svg/icon/exit.svg">
+                    
                 </div>
             </div>
         </div>
