--- a/ia/GameOver.html
+++ b/ia/GameOver.html
@@ -11,7 +11,7 @@
             <a href="index.html">
                 <div id="continue-button" class="ctrl-console console">
                     <div class="ctrl-button frame button">
-                        <div w3-include-html="./svg/icon/start.svg">
+                        <div w3-include-html="./svg/icon/again.svg">
 
                         </div>
                     </div>
