--- a/ia/index.html
+++ b/ia/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Game</title>
+    <title>Shapele</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
