--- a/ia/GameOver.html
+++ b/ia/GameOver.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Shapele</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
     <script type="text/javascript" src="./w3c-includeHTML.js"></script>
