--- a/ia/StartPage.html
+++ b/ia/StartPage.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <link rel="stylesheet" href="./index.css" />
+	<title>Shapele</title>
+	<link rel="stylesheet" href="./index.css" />
 	<link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
 </head>
 <body>
