--- a/ia/index.html
+++ b/ia/index.html
@@ -78,7 +78,7 @@
 
     <div class="intro">
         <h1 class="logo-header">
-            <span class="logo">Start</span></br><span class="logo">Now</span>
+            <span class="logo"><p style="color:#aa00ff;">S</p><p style="color:#00bbff;">t</p><p style="color:#aa00ff;">a</p><p style="color:#009944;">r</p><p style="color:#ccbb99;">t</p></span></br><span class="logo"><p style="color:#ff0000;">N</p><p style="color:#00bbff;">o</p><p style="color:#ff5500;">w</p></span>
         </h1>
         <script src="app.js"></script>
     </div>
