--- a/ia/GameOver.html
+++ b/ia/GameOver.html
@@ -1,29 +1,33 @@
 <html>
 <head>
     <title>Shapele</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./index.css" />
     <link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
-    <script type="text/javascript" src="./w3c-includeHTML.js"></script>
+    <script type="text/javascript" src="./script/w3c-includeHTML.js"></script>
 </head>
 <body>
     <div id="main-box">
         <img src="./svg/icon/GameOver.svg" width="450">
         <div id="continue-button" class="ctrl-console console">
-            <a href="index.html">
-                <div id="continue-button" class="ctrl-console console">
+
+            <div id="continue-button" class="ctrl-console console">
+                <a href="index.html">
                     <div class="ctrl-button frame button">
                         <div w3-include-html="./svg/icon/again.svg">
 
                         </div>
                     </div>
-                    <a href="StartPage.html">
-                        <div id="leave-button" class="ctrl-button frame button">
-                            <div w3-include-html="./svg/icon/exit.svg">
+                </a>
 
-                            </div>
+                <a href="StartPage.html">
+                    <div id="leave-button" class="ctrl-button frame button">
+                        <div w3-include-html="./svg/icon/exit.svg">
+
                         </div>
-                        </a>
-                </div>
+                    </div>
+                </a>
+            </div>
+
         </div>
     </div>
 
