--- a/ia/StartPage.html
+++ b/ia/StartPage.html
@@ -1,25 +1,28 @@
 <html>
 <head>
-	<title>Shapele</title>
-	<link rel="stylesheet" href="./index.css" />
-	<link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
+    <title>Shapele</title>
+    <link rel="stylesheet" href="./index.css" />
+    <link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
+    <script type="text/javascript" src="./script/w3c-includeHTML.js"></script>
 </head>
 <body>
 
-    </br>
+    <br />
     <img src="./svg/icon/icon.svg" class="center1">
-    </br>
+    <br />
     <img src="./svg/icon/shapele.svg" class="center1">
-    </br></br></br>
+    <br /><br /><br />
     <a href="index.html">
-        <div class="ctrl-button1 frame1 button1">
-            <div>
-                <div w3-include-html="./svg/icon/start.svg">
+        <div class="ctrl-button frame button">
+            <div w3-include-html="./svg/icon/start.svg">
 
-                </div>
             </div>
 
         </div>
     </a>
+
+    <script>
+        includeHTML();
+    </script>
 </body>
 </html>
