--- a/ia/startmenu/index.html
+++ b/ia/startmenu/index.html
@@ -17,7 +17,7 @@
 		<h1 class="logo-header">
 			<span class="logo">Start</span></br><span class="logo">Now</span>
 		</h1>
-		<script src="app.js"></script>
+		<script src="script/app.js"></script>
 	</div>
 	
 	
