--- a/ia/index.html
+++ b/ia/index.html
@@ -68,19 +68,19 @@
     </div>
 
 
-    <!--<div class="intro">
+    <div class="intro">
         <h1 class="logo-header">
-            <span class="logo"><p style="color:#aa00ff;">S</p><p style="color:#00bbff;">t</p><p style="color:#aa00ff;">a</p><p style="color:#009944;">r</p><p style="color:#ccbb99;">t</p></span></br><span class="logo"><p style="color:#ff0000;">N</p><p style="color:#00bbff;">o</p><p style="color:#ff5500;">w</p></span>
+            <span class="logo" style="color:#aa00ff">S</span><span class="logo" style="color:#00bbff">t</span><span class="logo" style="color:#776655">a</span><span class="logo" style="color:#009944">r</span><span class="logo" style="color:#ccbb99">t</span>
+            <span class="logo" style="color:#ff0000">N</span><span class="logo" style="color:#00bbff">o</span><span class="logo" style="color:#ff5500">w</span>
         </h1>
         <script src="./script/app.js"></script>
-    </div>-->
+    </div>
     <!-- script -->
     <script type="text/javascript" src="./script/timer.js"></script>
     <script>
         includeHTML();
         startTimer();
     </script>
-
 
 </body>
 </html>
