--- a/ia/index.html
+++ b/ia/index.html
@@ -17,7 +17,7 @@
         <div class="console">
             <div id="time-frame" class="ctrl-button frame">
                 <div>
-                    <clock></clock>
+                    <clock id="timer"></clock>
                 </div>
             </div>
 
