Add stuff and fix stuff

--- a/ia/GameOver.html
+++ b/ia/GameOver.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Shapele</title>
     <link rel="stylesheet" href="./index.css" />
     <link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
@@ -11,7 +12,7 @@
         <div id="continue-button" class="ctrl-console console">
 
             <div id="continue-button" class="ctrl-console console">
-                <a href="index.html">
+                <a href="/">
                     <div class="ctrl-button frame button">
                         <div w3-include-html="./svg/icon/again.svg">
 
@@ -19,7 +20,7 @@
                     </div>
                 </a>
 
-                <a href="StartPage.html">
+                <a href="/StartPage.html">
                     <div id="leave-button" class="ctrl-button frame button">
                         <div w3-include-html="./svg/icon/exit.svg">
 
