--- a/ia/GameOver.html
+++ b/ia/GameOver.html
@@ -11,8 +11,7 @@
         <img src="./svg/icon/GameOver.svg" width="450">
         <div id="continue-button" class="ctrl-console console">
 
-            <div id="continue-button" class="ctrl-console console">
-                <a href="/">
+                <a href="./index.html">
                     <div class="ctrl-button frame button">
                         <div w3-include-html="./svg/icon/again.svg">
 
@@ -20,14 +19,13 @@
                     </div>
                 </a>
 
-                <a href="/StartPage.html">
+                <a href="./StartPage.html">
                     <div id="leave-button" class="ctrl-button frame button">
                         <div w3-include-html="./svg/icon/exit.svg">
 
                         </div>
                     </div>
                 </a>
-            </div>
 
         </div>
     </div>
