--- a/ia/index.html
+++ b/ia/index.html
@@ -55,7 +55,7 @@
 
                 </div>
             </div>
-            <a href="/StartPage.html">
+            <a href="./StartPage.html">
                 <div id="leave-button" class="ctrl-button frame button">
                     <div w3-include-html="./svg/icon/exit.svg">
 
