--- a/ia/StartPage.html
+++ b/ia/StartPage.html
@@ -12,7 +12,7 @@
     <br />
     <img src="./svg/icon/shapele.svg" class="center1">
     <br /><br /><br />
-    <a href="/">
+    <a href="./index.html">
         <div class="ctrl-button frame button">
             <div w3-include-html="./svg/icon/start.svg">
 
