--- a/ia/StartPage.html
+++ b/ia/StartPage.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Shapele</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
     <script type="text/javascript" src="./script/w3c-includeHTML.js"></script>
 </head>
