--- a/ia/end.html
+++ b/ia/end.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <title>Shapele</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://use.typekit.net/iju2lko.css">
     <link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
@@ -36,7 +36,7 @@
             <span class="logo" style="color:#ff5500">i</span><span class="logo" style="color:#663300">s</span><span class="logo" style="color:#005522">:</span><br /><span class="logo"><span id="counter"></span>
             <script type="text/javascript" src="counting.js"></script></span>
         </h1>
-        <script src="appM.js"></script>
+        <script src="./script/appM.js"></script>
     </div>-->
 
     <script>
