--- a/ia/index.html
+++ b/ia/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Shapele</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://use.typekit.net/iju2lko.css">
     <script type="text/javascript" src="./script/w3c-includeHTML.js"></script>
