--- a/ia/index.html
+++ b/ia/index.html
@@ -31,22 +31,22 @@
         </div>
 
         <div class="game-box frame button">
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
-            <div class="game-button"></div>
+            <div class="game-button" w3-include-html="./svg/shape/3star.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/arc.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/arrow.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/diamond.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/hexagon.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/oval.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/parallelogram.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/pentagon.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/right_angle.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/round.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/square.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/star.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/trapezoid.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/triangle.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/wire.svg"></div>
+            <div class="game-button" w3-include-html="./svg/shape/x_mark.svg"></div>
         </div>
 
         <div id="continue-button" class="console">
@@ -68,13 +68,13 @@
     </div>
 
 
-    <div class="intro">
+    <!--<div class="intro">
         <h1 class="logo-header">
             <span class="logo" style="color:#aa00ff">S</span><span class="logo" style="color:#00bbff">t</span><span class="logo" style="color:#776655">a</span><span class="logo" style="color:#009944">r</span><span class="logo" style="color:#ccbb99">t</span>
             <span class="logo" style="color:#ff0000">N</span><span class="logo" style="color:#00bbff">o</span><span class="logo" style="color:#ff5500">w</span>
         </h1>
         <script src="./script/app.js"></script>
-    </div>
+    </div>-->
     <!-- script -->
     <script type="text/javascript" src="./script/timer.js"></script>
     <script>
