--- a/ia/index.html
+++ b/ia/index.html
@@ -29,7 +29,7 @@
                 <div></div>
             </div>
 
-            <div style="display: none">
+            <div class="boxes" style="display: none">
                 <div class="Box" w3-include-html="./svg/shape/3star.svg"></div> 
                 <div class="Box" w3-include-html="./svg/shape/arc.svg"></div> 
                 <div class="Box" w3-include-html="./svg/shape/arrow.svg"></div> 
