--- a/ia/index.html
+++ b/ia/index.html
@@ -50,22 +50,22 @@
         </div>
 
         <div class="game-box frame button">
-            <div class="game-button" w3-include-html=""></div>
-            <div class="game-button" w3-include-html="./svg/shape/arc.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/arrow.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/diamond.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/hexagon.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/oval.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/parallelogram.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/pentagon.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/right_angle.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/round.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/square.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/star.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/trapezoid.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/triangle.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/wire.svg"></div>
-            <div class="game-button" w3-include-html="./svg/shape/x_mark.svg"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
+            <div class="game-button"></div>
         </div>
 
         <div id="continue-button" class="console">
