--- a/ia/index.html
+++ b/ia/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://use.typekit.net/iju2lko.css">
     <script type="text/javascript" src="./script/w3c-includeHTML.js"></script>
+    <script type="text/javascript" src="./script/game.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
 </head>
@@ -30,22 +31,22 @@
             </div>
 
             <div class="boxes" style="display: none">
-                <div class="Box" w3-include-html="./svg/shape/3star.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/arc.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/arrow.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/diamond.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/hexagon.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/oval.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/parallelogram.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/pentagon.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/right_angle.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/round.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/square.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/star.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/trapezoid.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/triangle.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/wire.svg"></div> 
-                <div class="Box" w3-include-html="./svg/shape/x_mark.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/3star.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/arc.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/arrow.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/diamond.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/hexagon.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/oval.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/parallelogram.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/pentagon.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/right_angle.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/round.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/square.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/star.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/trapezoid.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/triangle.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/wire.svg"></div> 
+                <div class="box" w3-include-html="./svg/shape/x_mark.svg"></div> 
             </div>
         </div>
 
