--- a/ia/index.html
+++ b/ia/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="game-box frame button">
-            <div class="game-button"></div>
+            <div class="game-button"><div w3-include-html="./svg/shape/arc.svg"></div></div>
             <div class="game-button"></div>
             <div class="game-button"></div>
             <div class="game-button"></div>
