--- a/ia/index.html
+++ b/ia/index.html
@@ -48,6 +48,25 @@
                 <div class="box" w3-include-html="./svg/shape/wire.svg"></div> 
                 <div class="box" w3-include-html="./svg/shape/x_mark.svg"></div> 
             </div>
+            <div class="mini-boxes" style="display: none">
+                <div class="mini-box" w3-include-html="./svg/shapeMini/3starM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/arcM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/arrowM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/diamondM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/hexagonM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/ovalM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/parallelogramM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/pentagonM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/right_angleM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/roundM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/squareM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/starM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/trapezoidM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/triangleM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/wireM.svg"></div> 
+                <div class="mini-box" w3-include-html="./svg/shapeMini/x_markM.svg"></div> 
+            </div>
+
         </div>
 
         <div class="game-box frame button">
