game - change show in color or shape, timer reset

--- a/ia/index.html
+++ b/ia/index.html
@@ -66,6 +66,9 @@
                 <div class="mini-box" w3-include-html="./svg/shapeMini/wireM.svg"></div> 
                 <div class="mini-box" w3-include-html="./svg/shapeMini/x_markM.svg"></div> 
             </div>
+            <div class="mini-boxes" style="display:none">
+                <div id="color-icon" class="mini-box" w3-include-html="./svg/shapeMini/color.svg"></div>
+            </div>
 
         </div>
 
