--- a/ia/StartPage.html
+++ b/ia/StartPage.html
@@ -21,6 +21,15 @@
         </div>
     </a>
 
+    <div class="popup" id="popup-1">
+        <div class="overlay"></div>
+        <dr class="content">
+            <div class="close-btn" onclick="togglePopup()"><img src="./svg/icon/x.svg" width="15"></div>
+            <img src="./svg/icon/HowToPlay.svg" width="350">
+            <p>W<br />W<br />W<br />W<br />W<br />W<br />W<br />WWWWWWWWWWWWWWWWWWW</p>
+    </div>
+
+    <script src="./script/how.js"></script>
     <script>
         includeHTML();
     </script>
