--- a/ia/index.html
+++ b/ia/index.html
@@ -22,11 +22,10 @@
                 </div>
             </div>
 
+            <h3><br />LVL-1
+            <br /><br />Mark:100</h3>
+
             <div class="icon-bar frame">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
                 <div></div>
             </div>
 
