--- a/ia/index.html
+++ b/ia/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Shapele</title>
+    <link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://use.typekit.net/iju2lko.css">
+
+    <script type="text/javascript" src="./script/score.js"></script>
     <script type="text/javascript" src="./script/w3c-includeHTML.js"></script>
     <script type="text/javascript" src="./script/game.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
 </head>
 <body>
 
@@ -21,9 +23,12 @@
                     <clock id="timer" class=""></clock>
                 </div>
             </div>
-
-            <h3><br />LVL-1
-            <br /><br />Mark:100</h3>
+            
+            <div class="info-box">
+                <h3>LVL - <span class="lv">1</span></h3>
+                <h3>Mark: <span class="score">100</span></h3>
+            </div>
+            
 
             <div class="icon-bar frame">
                 <div></div>
