--- a/ia/index.html
+++ b/ia/index.html
@@ -25,8 +25,8 @@
             </div>
             
             <div class="info-box">
-                <h3>LVL - <span class="lv">1</span></h3>
-                <h3>Mark: <span class="score">100</span></h3>
+                <h3><img src="./svg/icon/LVL.svg" width="58"> <span class="lv">1</span></h3>
+                <h3><img src="./svg/icon/Mark.svg" width="68"> <span class="score">100</span></h3>
             </div>
             
 
@@ -128,7 +128,7 @@
 
     <div class="intro">
         <h1 class="logo-header">
-            <span class="logo" style="color:#aa00ff">S</span><span class="logo" style="color:#00bbff">t</span><span class="logo" style="color:#776655">a</span><span class="logo" style="color:#009944">r</span><span class="logo" style="color:#ccbb99">t</span>
+            <span class="logo" style="color:#aa00ff">S</span><span class="logo" style="color:#00bbff">t</span><span class="logo" style="color:#776655">a</span><span class="logo" style="color:#009944">r</span><span class="logo" style="color:#ccbb99">t</span><br/>
             <span class="logo" style="color:#ff0000">N</span><span class="logo" style="color:#00bbff">o</span><span class="logo" style="color:#ff5500">w</span>
         </h1>
         <script src="./script/app.js"></script>
