--- a/ia/end.html
+++ b/ia/end.html
@@ -29,15 +29,15 @@
         </div>
     </div>
 
-    <!--<div class="intro">
+    <div class="intro">
         <h1 class="logo-header">
-            <span class="logo" style="color:#ccbb99">Y</span><span class="logo" style="color:#ff0000">o</span><span class="logo" style="color:#aa00ff">u</span><span class="logo" style="color:#aaff00">r</span>
+            <span class="logo" style="color:#ccbb99">Y</span><span class="logo" style="color:#ff0000">o</span><span class="logo" style="color:#aa00ff">u</span><span class="logo" style="color:#aaff00">r</span><br/>
             <span class="logo" style="color:#009944">m</span><span class="logo" style="color:#00bbff">a</span><span class="logo" style="color:#0000ff">r</span><span class="logo" style="color:#ff0088">k</span>
             <span class="logo" style="color:#ff5500">i</span><span class="logo" style="color:#663300">s</span><span class="logo" style="color:#005522">:</span><br /><span class="logo"><span id="counter"></span>
-            <script type="text/javascript" src="counting.js"></script></span>
+            <script type="text/javascript" src="./script/counting.js"></script></span>
         </h1>
         <script src="./script/appM.js"></script>
-    </div>-->
+    </div>
 
     <script>
         includeHTML();
