--- a/ia/end.html
+++ b/ia/end.html
@@ -3,14 +3,82 @@
     <title>Shapele</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/leaderboard.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://use.typekit.net/iju2lko.css">
     <link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
     <script type="text/javascript" src="./script/w3c-includeHTML.js"></script>
 </head>
 <body>
+
     <div id="main-box">
-        <img src="./svg/icon/mark.svg" width="450">
+        <div class="center">
+            <div class="top3">
+                <div class="two item">
+                    <div class="pos">2</div>
+                    <div class="name"> Edgar Soto</div>
+                    <div class="score">6453</div>
+                </div>
+                <div class="one item">
+                    <div class="pos">1</div>
+
+                    <div class="name"> Clifford James</div>
+                    <div class="score">6794</div>
+                </div>
+                <div class="three item">
+                    <div class="pos">3</div>
+
+                    <div class="name"> Nevaeh Silva</div>
+                    <div class="score">6034</div>
+                </div>
+            </div>
+            <div class="list">
+                <div class="item">
+                    <div class="pos">4</div>
+
+                    <div class="name"> Clayton Watson</div>
+                    <div class="score">5980</div>
+                </div>
+                <div class="item">
+                    <div class="pos">5</div>
+
+                    <div class="name"> Debbie Lane</div>
+                    <div class="score">5978</div>
+                </div>
+                <div class="item">
+                    <div class="pos">6</div>
+
+                    <div class="name"> Gabriella Steward</div>
+                    <div class="score">5845</div>
+                </div>
+                <div class="item">
+                    <div class="pos">7</div>
+
+                    <div class="name"> Nina Perkins</div>
+                    <div class="score">5799</div>
+                </div>
+                <div class="item">
+                    <div class="pos">8</div>
+
+                    <div class="name"> Dennis Henry</div>
+                    <div class="score">5756</div>
+                </div>
+                <div class="item">
+                    <div class="pos">9</div>
+
+                    <div class="name"> Courtney Fuller</div>
+                    <div class="score">5713</div>
+                </div>
+                <div class="item">
+                    <div class="pos">10</div>
+
+                    <div class="name"> Joan Wood</div>
+                    <div class="score">
+                        5674
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="continue-button" class="ctrl-console console">
             <a href="index.html">
                 <div class="ctrl-button frame button">
@@ -31,16 +99,20 @@
 
     <div class="intro">
         <h1 class="logo-header">
-            <span class="logo" style="color:#ccbb99">Y</span><span class="logo" style="color:#ff0000">o</span><span class="logo" style="color:#aa00ff">u</span><span class="logo" style="color:#aaff00">r</span><br/>
+            <span class="logo" style="color:#ccbb99">Y</span><span class="logo" style="color:#ff0000">o</span><span class="logo" style="color:#aa00ff">u</span><span class="logo" style="color:#aaff00">r</span><br />
             <span class="logo" style="color:#009944">m</span><span class="logo" style="color:#00bbff">a</span><span class="logo" style="color:#0000ff">r</span><span class="logo" style="color:#ff0088">k</span>
-            <span class="logo" style="color:#ff5500">i</span><span class="logo" style="color:#663300">s</span><span class="logo" style="color:#005522">:</span><br /><span class="logo"><span id="counter"></span>
-            <script type="text/javascript" src="./script/counting.js"></script></span>
+            <span class="logo" style="color:#ff5500">i</span><span class="logo" style="color:#663300">s</span><span class="logo" style="color:#005522">:</span><br /><span class="logo">
+                <span id="counter"></span>
+                <script type="text/javascript" src="./script/counting.js"></script>
+            </span>
         </h1>
         <script src="./script/appM.js"></script>
     </div>
-
+    
     <script>
         includeHTML();
     </script>
+
+
 </body>
 </html>
