start count anim

--- a/ia/index.html
+++ b/ia/index.html
@@ -93,6 +93,9 @@
             <div class="game-button"></div>
             <div class="game-button"></div>
             <div class="game-button"></div>
+            <div id="game-start-count" class="game-start-count disable">
+
+            </div>
         </div>
 
         <div id="continue-button" class="console">
@@ -128,6 +131,7 @@
 
     <div class="intro">
         <h1 class="logo-header">
+
             <span class="logo" style="color:#aa00ff">S</span><span class="logo" style="color:#00bbff">t</span><span class="logo" style="color:#776655">a</span><span class="logo" style="color:#009944">r</span><span class="logo" style="color:#ccbb99">t</span><br/>
             <span class="logo" style="color:#ff0000">N</span><span class="logo" style="color:#00bbff">o</span><span class="logo" style="color:#ff5500">w</span>
         </h1>
